# fmu_from_struct

./: Cargo.toml  LICENSE  README.md
examples/: README.md
examples/harmonic_signal/: Cargo.toml
examples/harmonic_signal/src/: lib.rs
examples/pid_controller/: .gitignore  Cargo.toml
examples/pid_controller/src/: lib.rs
examples/spring/: .gitignore  Cargo.toml  README.md  modelDescription.xml  post_build_script.py
examples/spring/src/: lib.rs
examples/spring/test_run/: test_run.py
examples/spring_interface/: .gitignore  Cargo.toml  README.md
examples/spring_interface/src/: lib.rs
fmi_types/: Cargo.toml
fmi_types/src/: lib.rs
fmrs_model/: Cargo.toml
fmrs_model/src/: lib.rs
fmrs_model/src/fmi/: co_simulation.rs  discrete_state.rs  getters.rs  mod.rs  model_exchange.rs  model_managment.rs  serialize.rs  setters.rs
fmrs_model_build_utils/: README.md  setup.py
fmrs_model_build_utils/fmrs_model_build_utils/: post_build_script.py
fmrs_model_derive/: Cargo.toml
fmrs_model_derive/src/: do_step.rs  field_information.rs  fmi_version.rs  get_and_set.rs  lib.rs  model_description.rs  model_management.rs  state_management.rs  superstructure.rs
fmu_build_utils/: README.md  setup.py
fmu_build_utils/fmu_build_utils/: package_fmu.py
fmu_from_struct/: Cargo.toml
fmu_from_struct/src/: lib.rs
fmu_from_struct/src/fmi_types/: common.rs  mod.rs
fmu_from_struct/src/unimplemented_functions/: fmi2.rs  fmi3.rs  mod.rs
fmu_from_struct_derive/: Cargo.toml  README.md
fmu_from_struct_derive/src/: default.rs  do_step.rs  field_information.rs  fmi_version.rs  fmu_info.rs  get_and_set.rs  lib.rs  model_description.rs  model_management.rs  state_management.rs  superstructure.rs
fmu_from_struct_derive/src/field_information/: causality.rs  mod.rs
fmu_from_struct_t/fmu_from_struct_derive/: Cargo.toml
package_fmu_after_build/: Cargo.toml  README.md
package_fmu_after_build/src/: errors.rs  main.rs
(+13 files in other folders)
