[package]
name = "fmrs_model_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.40", features = ["extra-traits"] }
uuid = { version = "1.6.1", features = ["v4"] }
proc-macro2 = "1.0"
fmi_types = { path = "../fmi_types" }
libc = "0.2.151"
