[package]
name = "fmu_from_struct_derive"
version = "0.1.1"
authors = ["Jarle Kramer <jarle.kramer@gmail.com>"]
description = "A derive crate for automatically setting up FMU models in Rust"
homepage = "https://github.com/jarlekramer/fmu_from_struct"
readme = "README.md"
repository = "https://github.com/jarlekramer/fmu_from_struct"
license = "MIT"
license_file = "../LICENSE"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.40", features = ["extra-traits"] }
uuid = { version = "1.6.1", features = ["v4"] }
proc-macro2 = "1.0"
